// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders as expected when passing a different className 1`] = `
[
  <input
    checked={true}
    className="lab-checkbox lab-checkbox--purple"
    id="test-checkbox"
    name="test-checkbox"
    onChange={[Function]}
    type="checkbox"
  />,
  <label
    className="lab-checkbox__label"
    htmlFor="test-checkbox"
  >
    <span
      className="lab-checkbox__box"
    >
      <span
        className="lab-icon lab-icon--confirm  "
      >
        <svg
          aria-hidden={true}
          className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
          fill="currentColor"
          height={20}
          viewBox="0 0 20 20"
          width={20}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.37 10.17a.5.5 0 0 0-.74.66l4 4.5c.19.22.52.23.72.02l10.5-10.5a.5.5 0 0 0-.7-.7L7.02 14.27l-3.65-4.1Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </span>
    test checkbox
  </label>,
]
`;

exports[`Checkbox renders as expected when passing disabled as true 1`] = `
[
  <input
    checked={false}
    className="lab-checkbox "
    disabled={true}
    id="test-checkbox"
    name="test-checkbox"
    onChange={[Function]}
    type="checkbox"
  />,
  <label
    className="lab-checkbox__label"
    htmlFor="test-checkbox"
  >
    <span
      className="lab-checkbox__box"
    />
    test checkbox
  </label>,
]
`;

exports[`Checkbox renders as expected when passing indeterminate 1`] = `
[
  <input
    checked={false}
    className="lab-checkbox lab-checkbox--purple"
    id="test-checkbox"
    name="test-checkbox"
    onChange={[Function]}
    type="checkbox"
  />,
  <label
    className="lab-checkbox__label"
    htmlFor="test-checkbox"
  >
    <span
      className="lab-checkbox__box"
    >
      <span
        className="lab-icon lab-icon--minus  "
      >
        <svg
          aria-hidden={true}
          className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
          fill="currentColor"
          height={20}
          viewBox="0 0 20 20"
          width={20}
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="currentColor"
            height={1}
            rx={0.5}
            width={14}
            x={3}
            y={9.5}
          />
        </svg>
      </span>
    </span>
    test checkbox
  </label>,
]
`;

exports[`Checkbox renders as expected when passing indeterminate as true 1`] = `
[
  <input
    checked={true}
    className="lab-checkbox "
    id="test-checkbox"
    name="test-checkbox"
    onChange={[Function]}
    type="checkbox"
  />,
  <label
    className="lab-checkbox__label"
    htmlFor="test-checkbox"
  >
    <span
      className="lab-checkbox__box"
    >
      <span
        className="lab-icon lab-icon--minus  "
      >
        <svg
          aria-hidden={true}
          className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
          fill="currentColor"
          height={20}
          viewBox="0 0 20 20"
          width={20}
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="currentColor"
            height={1}
            rx={0.5}
            width={14}
            x={3}
            y={9.5}
          />
        </svg>
      </span>
    </span>
    test checkbox
  </label>,
]
`;

exports[`Checkbox renders with base props 1`] = `
[
  <input
    checked={false}
    className="lab-checkbox "
    id="test-checkbox"
    name="test-checkbox-group"
    onChange={[Function]}
    type="checkbox"
  />,
  <label
    className="lab-checkbox__label"
    htmlFor="test-checkbox"
  >
    <span
      className="lab-checkbox__box"
    />
    test checkbox
  </label>,
]
`;
